Alignment fixes.

--- a/src/app/components/photography/photography.component.scss
+++ b/src/app/components/photography/photography.component.scss
@@ -13,6 +13,7 @@
     align-items: flex-end;
     justify-content: flex-start;
     flex-flow: row wrap;
+    padding: 5px;
     .photo{
       margin: 5px 5px;
       height: 200px;
